--- a/src/UI/Components/Header/Header.module.css
+++ b/src/UI/Components/Header/Header.module.css
@@ -269,7 +269,7 @@
         display: flex;
     }
     .mobileNavPart a {
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 600;
         color: var(--text-color);
         text-align: center;
@@ -285,7 +285,7 @@
         color: var(--main-color);
     }
     .mobileNavFul a {
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 600;
         color: black;
         text-align: center;
@@ -359,7 +359,7 @@
         font-size: 18px;
     }
     .mobileNavHeader h3{
-        font-size: 26px;
+        font-size: 35px;
     }
     .btn{
         font-size: 16px;
@@ -381,13 +381,13 @@
     }
 
     .mobileNavPart a {
-        font-size: 14px;
+        font-size: 18px;
     }
     .mobileNavFul a {
-        font-size: 14px;
+        font-size: 18px;
     }
     .mobileNavHeader h3{
-        font-size: 20px;
+        font-size: 35px;
     }
     .btn{
         font-size: 14px;
@@ -402,13 +402,13 @@
         font-size: 14px;
     }
     .mobileNavPart a {
-        font-size: 12px;
+        font-size: 18px;
     }
     .mobileNavFul a {
-        font-size: 12px;
+        font-size: 18px;
     }
     .mobileNavHeader h3{
-        font-size: 16px;
+        font-size: 35px;
     }
     .btn{
         min-width: 130px;
